# wordle-rs

./: .gitignore  Cargo.toml  default.nix  shell.nix  sources.nix
src/: main.rs
