[package]
name = "wordle-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde = "1.0.228"
